// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.licenses;

option java_package = "org.sonarqube.ws";
option java_outer_classname = "Licenses";
option optimize_for = SPEED;

// Response of GET api/licenses/list
message ListWsResponse {
  repeated License licenses = 1;
}

message License {
  optional string key = 1;
  optional string name = 2;
  optional string value = 3;
  optional string product = 4;
  optional string organization = 5;
  optional string expiration = 6;
  optional string serverId = 7;
  optional string type = 8;
  optional AdditionalProperties additionalProperties = 9;
  optional bool invalidProduct = 10;
  optional bool invalidExpiration = 11;
  optional bool invalidServerId = 12;
}

message AdditionalProperties {
  map<string, string> additionalProperties = 1;
}



